push requirements txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,31 @@
 flask
 requests
+beautifulsoup4==4.8.2
+certifi==2019.11.28
+chardet==3.0.4
+cycler==0.10.0
+decorator==4.4.1
+idna==2.8
+imageio==2.6.1
+joblib==0.14.1
+kiwisolver==1.1.0
+matplotlib==3.1.2
+networkx==2.4
+numpy==1.18.1
+pandas==0.25.3
+Pillow==7.0.0
+py4j==0.10.7
+pyparsing==2.4.6
+pyspark==2.4.4
+python-dateutil==2.8.1
+pytz==2019.3
+PyWavelets==1.1.1
+requests==2.22.0
+scikit-image==0.16.2
+scikit-learn==0.22.1
+scipy==1.4.1
+six==1.14.0
+sklearn==0.0
+soupsieve==1.9.5
+tqdm==4.42.1
+urllib3==1.25.8
