navbar is working

--- a/static/package.json
+++ b/static/package.json
@@ -33,5 +33,9 @@
       "es2015",
       "react"
     ]
+  },
+  "dependencies": {
+    "bootstrap": "^4.4.1",
+    "react-bootstrap": "^1.0.0"
   }
 }
