--- a/static/package.json
+++ b/static/package.json
@@ -36,6 +36,7 @@
   },
   "dependencies": {
     "bootstrap": "^4.4.1",
-    "react-bootstrap": "^1.0.0"
+    "react-bootstrap": "^1.0.0",
+    "react-router-dom": "^5.1.2"
   }
 }
