--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,30 @@
-flask
+astroid==2.3.3
 beautifulsoup4==4.8.2
 certifi==2019.11.28
 chardet==3.0.4
+click==7.1.1
 cycler==0.10.0
 decorator==4.4.1
+Flask==1.1.2
+Flask-SQLAlchemy==2.4.1
 idna==2.8
+iexfinance==0.4.3
 imageio==2.6.1
+isort==4.3.21
+itsdangerous==1.1.0
+Jinja2==2.11.2
 joblib==0.14.1
 kiwisolver==1.1.0
+lazy-object-proxy==1.4.3
+MarkupSafe==1.1.1
 matplotlib==3.1.2
+mccabe==0.6.1
 networkx==2.4
 numpy==1.18.1
 pandas==0.25.3
 Pillow==7.0.0
 py4j==0.10.7
+pylint==2.4.4
 pyparsing==2.4.6
 pyspark==2.4.4
 python-dateutil==2.8.1
@@ -26,5 +37,9 @@ scipy==1.4.1
 six==1.14.0
 sklearn==0.0
 soupsieve==1.9.5
+SQLAlchemy==1.3.16
 tqdm==4.42.1
+typed-ast==1.4.1
 urllib3==1.25.8
+Werkzeug==1.0.1
+wrapt==1.11.2
