--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ mccabe==0.6.1
 networkx==2.4
 numpy==1.18.1
 pandas==0.25.3
+pandas-market-calendars==1.2
 Pillow==7.0.0
 py4j==0.10.7
 pylint==2.4.4
