--- a/static/package.json
+++ b/static/package.json
@@ -38,6 +38,7 @@
     "bootstrap": "^4.4.1",
     "d3": "^5.16.0",
     "react-bootstrap": "^1.0.0",
+    "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.1.2"
   }
 }
