--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,14 @@
 astroid==2.3.3
+bcrypt==3.1.7
 beautifulsoup4==4.8.2
 certifi==2019.11.28
+cffi==1.14.0
 chardet==3.0.4
 click==7.1.1
 cycler==0.10.0
 decorator==4.4.1
 Flask==1.1.2
+Flask-Bcrypt==0.7.1
 Flask-SQLAlchemy==2.4.1
 idna==2.8
 iexfinance==0.4.3
@@ -25,6 +28,7 @@ pandas==0.25.3
 pandas-market-calendars==1.2
 Pillow==7.0.0
 py4j==0.10.7
+pycparser==2.20
 pylint==2.4.4
 pyparsing==2.4.6
 pyspark==2.4.4
