--- a/static/package.json
+++ b/static/package.json
@@ -24,8 +24,10 @@
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "css-loader": "^3.5.3",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "style-loader": "^1.2.1",
     "webpack": "^3.10.0"
   },
   "babel": {
