--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 astroid==2.3.3
+attrs==19.3.0
 bcrypt==3.1.7
 beautifulsoup4==4.8.2
 certifi==2019.11.28
@@ -13,6 +14,7 @@ Flask-SQLAlchemy==2.4.1
 idna==2.8
 iexfinance==0.4.3
 imageio==2.6.1
+importlib-metadata==1.6.0
 isort==4.3.21
 itsdangerous==1.1.0
 Jinja2==2.11.2
@@ -22,16 +24,21 @@ lazy-object-proxy==1.4.3
 MarkupSafe==1.1.1
 matplotlib==3.1.2
 mccabe==0.6.1
+more-itertools==8.2.0
 networkx==2.4
 numpy==1.18.1
+packaging==20.3
 pandas==0.25.3
 pandas-market-calendars==1.2
 Pillow==7.0.0
+pluggy==0.13.1
+py==1.8.1
 py4j==0.10.7
 pycparser==2.20
 pylint==2.4.4
 pyparsing==2.4.6
 pyspark==2.4.4
+pytest==5.4.1
 python-dateutil==2.8.1
 pytz==2019.3
 PyWavelets==1.1.1
@@ -39,6 +46,7 @@ requests==2.22.0
 scikit-image==0.16.2
 scikit-learn==0.22.1
 scipy==1.4.1
+selenium==3.141.0
 six==1.14.0
 sklearn==0.0
 soupsieve==1.9.5
@@ -46,5 +54,7 @@ SQLAlchemy==1.3.16
 tqdm==4.42.1
 typed-ast==1.4.1
 urllib3==1.25.8
+wcwidth==0.1.9
 Werkzeug==1.0.1
 wrapt==1.11.2
+zipp==3.1.0
